# phenotype-pipeline

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.predict  Dockerfile.train  LICENSE  README.md  pyproject.toml  samconfig.toml  template.yaml
.aws-sam/: build.toml
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
docs/: high-level-design.md
docs/llds/: 01_data-ingestion.md  02_preprocessing.md  03_feature-engineering.md  04_model-training.md  05_prediction.md  06_deployment.md  07_ui.md  data-ingestion.md  deployment.md  feature-engineering.md  model-training.md  prediction.md  preprocessing.md  ui.md
docs/specs/: 01_data-ingestion.md  02_preprocessing.md  03_feature-engineering.md  04_model-training.md  05_prediction.md  06_deployment.md  07_ui.md
examples/: README.md  sample_brown_eyes.vcf  sample_green_eyes.vcf  sample_hazel_eyes.vcf  test_snp_1.vcf  test_snp_3.vcf
samples/: README.md  sample_snp_1.vcf  sample_snp_2.vcf  sample_snp_3.vcf  sample_snp_upload.vcf
src/genomic_ancestry_pipeline/: deployment.py  features.py  ingest.py  launch_training.py  prediction.py  preprocessing.py  sagemaker_train.py  training.py  ui.py
src/phenotype_pipeline/: deployment.py  features.py  ingest.py  launch_training.py  logging_config.py  models.py  prediction.py  preprocessing.py  sagemaker_train.py  training.py  ui.py
tests/: conftest.py  test_deployment.py  test_features.py  test_ingest.py  test_launch_training.py  test_prediction.py  test_preprocessing.py  test_sam_template.py  test_training.py  test_ui.py
