[project]
name = "phenotype-pipeline"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "xgboost==3.2.0",
    "pydantic==2.13.4",
    "boto3==1.43.7",
    "sagemaker==2.257.3",
    "scikit-learn==1.8.0",
    "numpy==2.4.4",
    "pandas==3.0.3",
    "streamlit==1.57.0",
    "requests==2.32.5",
]

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "moto[s3,sagemaker]==5.2.1",
    "aws-sam-cli==1.148.0",
    "pyyaml==6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phenotype_pipeline"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires a running Streamlit app (deselect with -m 'not integration')"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
